--- a/css/main.css
+++ b/css/main.css
@@ -203,6 +203,7 @@ position: relative;
 }
 
 .order__logo {
+  margin-bottom: 80px;
 	margin-top: 30px;
 	text-align: center;
   display: block;
@@ -283,6 +284,10 @@ position: relative;
     width: 200px
     padding: 14px 54px;
   }
+  .container{
+        padding: 0;
+        overflow-x: hidden;
+    }
 }
 
 /* 768-992px */
@@ -296,6 +301,11 @@ position: relative;
     padding: 10px 15px;
   }
 
+  .container{
+        padding: 0;
+        overflow-x: hidden;
+    }
+
 }
 
 
@@ -304,6 +314,11 @@ position: relative;
   .order__logo {
     margin-top: 40px;
   }
+
+  .container{
+        padding: 0;
+        overflow-x: hidden;
+    }
 }
 
   /*/* 320-576px */
@@ -429,6 +444,10 @@ position: relative;
 @media screen and (max-width: 576px) {
   .about__wrap {
     margin-left: 20px;
+  }
+
+  .about__text {
+    width: 320px;
   }
 
 }
@@ -632,11 +651,11 @@ position: relative;
   /*/* 320-576px */
 @media screen and (max-width: 576px) {
   .journal__wrap1 {
-    margin-left: 10px;
-  }
+  margin-left: 30px;
+}
 
   .journal__wrap2 {
-    margin-left: 10px;
+    margin-left: 30px;
   }
 
   .main__title {
@@ -646,6 +665,12 @@ position: relative;
   .journal__main {
     margin-bottom: 35px;
   }
+
+  .journal__wrap2 {
+   box-shadow: 1px -1px 10px 0px rgba(108, 117, 125, 0.09);
+}
+.journal__wrap1 {
+    box-shadow: -1px -5px 20px 0px rgba(108, 117, 125, 0.09);
 }
 
 /*------Wanna section-------*/
@@ -737,7 +762,9 @@ position: relative;
   .form__btn {
     width: 278px;
 }
-
+  .wanna__text {
+    width: 250px;
+  }
 }
 
 /*------Work section-------*/
@@ -785,6 +812,10 @@ position: relative;
   margin-top: 30px;
 }
 
+.work__title {
+  width: 270px;
+}
+
 .work__text {
   margin-top: 8px;
   padding: 0px 25px 0px 25px;
@@ -794,23 +825,30 @@ position: relative;
 
 /* 992-1200px */
 @media screen and (max-width: 1200px) {
-
+  .work__text {
+    margin-left: 50px;
+  }
 }
 
 /* 768-992px */
 @media screen and (max-width: 992px) {
-  .work__item {
+  /*.work__item {
    margin-left: 230px;
    margin-top: 20px;
-  }
+  }*/
 
   .work__circle {
     margin-bottom: 30px;
     margin-top: 40px;
   }
 
-  .work__title {
+  /*.work__title {
     margin-left: -220px;
+  }*/
+
+  .work__info {
+    text-align: center;
+    justify-content: center;
   }
 
   .work__text {
@@ -826,14 +864,14 @@ position: relative;
 
  /*576-768px*/ 
 @media screen and (max-width: 768px) {
-  .work__item {
+  /*.work__item {
    margin-left: 140px;
    margin-top: 20px;
-  }
+  }*/
 
-  .work__title {
+  /*.work__title {
     margin-left: -130px;
-  }
+  }*/
 
   .work {
     padding-top: 0;
@@ -846,14 +884,14 @@ position: relative;
     padding-top: 0;
   }
 
-  .work__item {
+ /* .work__item {
    margin-left: 20px;
    margin-top: 20px;
-  }
+  }*/
 
-  .work__title {
-    margin-left: 0px;
-  }
+ /* .work__title {
+    margin-left: -60px;
+  }*/
 
   .gray__circle {
     margin-left: 50px;
@@ -1099,7 +1137,7 @@ position: relative;
 .clients {
   background: url(../img/green-back.jpg) no-repeat center center;
   padding-top: 68px; 
-  padding-bottom: 620px;
+  padding-bottom: 50px;
 
 } 
 
@@ -1171,13 +1209,11 @@ position: relative;
   width: 515px;
   border-radius: 10px;
   padding: 40px 28px 45px 28px;
-  position: absolute;
-  margin-top: -300px;
-
+  margin-top: 100px;
+  margin-left: 312px;
 }
 
 .footer__input {
-  width: 300px;
   height: 60px;
   margin-bottom: 20px;
   font-weight: 400;
@@ -1223,13 +1259,9 @@ position: relative;
   margin-bottom: 30px;
 }
 
-  .form {
-    position: relative;
-  }
   .form__icons {
-    margin-top: 350px;
-    margin-left: 170px;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
+    margin-left: 504px;
   }
 
 .form__wrap {
@@ -1266,7 +1298,13 @@ position: relative;
 
 /* 992-1200px */
 @media screen and (max-width: 1200px) {
+  .footer__contact {
+    margin-left: 230px;
+  }
 
+  .form__icons {
+    margin-left: 400px;
+  }
 }
 
 /* 768-992px */
@@ -1279,8 +1317,13 @@ position: relative;
     width: 213px;
   }
 
+.footer__contact {
+    margin-left: 100px;
+  }
 
-
+.form__icons {
+    margin-left: 280px;
+  }
 
  /*576-768px*/ 
 @media screen and (max-width: 768px) {
@@ -1293,11 +1336,13 @@ position: relative;
     padding: 21px 25px;
   }
 
-.footer__contact {
-  margin-left: 10px;
+  .footer__contact {
+    margin-left: 15px;
+  }
 
-}
-
+  .form__icons {
+    margin-left: 180px;
+  }
 }
 
   /*/* 320-576px */
@@ -1313,7 +1358,8 @@ position: relative;
 .footer__contact {
 
   height: 495px;
-  width: 300px;  
+  width: 300px; 
+  margin-left: 20px; 
 }
 
 .footer__input {
@@ -1335,7 +1381,10 @@ position: relative;
 
 .form__icon {
   margin-top: 50px;
-  margin-left: -90px;
   margin-bottom: 20px;
+  }
+
+  .form__icons {
+    margin-left: 100px;
   }
 }
